# portfolio-recommender

./: .eslintrc.cjs  .gitignore  README.md  electron-builder.yml  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/memory/specs/: plan-qt.md  plan.md  portfolio-recommender.md  tasks.md  v2-dividend-tracker.md
.specify/workflows/: workflow-registry.json
qt-app/: CMakeLists.txt  LICENSE  README.md
qt-app/packaging/: CMakeLists.txt
qt-app/src/: CMakeLists.txt
qt-app/src/app/: TrayManager.cpp  TrayManager.h  main.cpp
qt-app/src/models/: Asset.h  BacktestResult.h  Portfolio.h  SensitivityPoint.h
qt-app/src/services/backtest/: Engine.cpp  Engine.h
qt-app/src/services/data/: DataStore.cpp  DataStore.h  RateLimiter.cpp  RateLimiter.h  UniverseManager.cpp  UniverseManager.h
qt-app/src/services/data/providers/: AlphaVantageProvider.cpp  AlphaVantageProvider.h  FmpProvider.cpp  FmpProvider.h  FredProvider.cpp  FredProvider.h  IMarketDataProvider.h  PolygonProvider.cpp  PolygonProvider.h  ProviderBase.cpp  ProviderBase.h  ResponseValidator.cpp  ResponseValidator.h
qt-app/src/services/export/: CsvExporter.cpp  CsvExporter.h  PdfExporter.cpp  PdfExporter.h
qt-app/src/services/import/: CsvParser.cpp  CsvParser.h
qt-app/src/services/optimization/: Optimizer.cpp  Optimizer.h
qt-app/src/services/sensitivity/: CurveGenerator.cpp  CurveGenerator.h
qt-app/src/services/slm/: ExplanationEngine.cpp  ExplanationEngine.h
qt-app/src/ui/controllers/: BacktestController.cpp  BacktestController.h  ExplanationController.cpp  ExplanationController.h  ExportController.cpp  ExportController.h  ImportController.cpp  ImportController.h  PortfolioController.cpp  PortfolioController.h  SavedController.cpp  SavedController.h  SensitivityController.cpp  SensitivityController.h  SettingsController.cpp  SettingsController.h
qt-app/src/ui/qml/: Main.qml
qt-app/src/ui/qml/components/: ExplanationPanel.qml  NavigationBar.qml
qt-app/src/ui/qml/pages/: BackTestPage.qml  GeneratePage.qml  ImportPage.qml  SavedPage.qml  SensitivityPage.qml  SettingsPage.qml  SetupWizard.qml
qt-app/src/utils/: Logger.cpp  Logger.h  Math.cpp  Math.h
qt-app/tests/: CMakeLists.txt
qt-app/tests/unit/: tst_backtest.cpp  tst_csvparser.cpp  tst_explanation.cpp  tst_export.cpp  tst_math.cpp  tst_optimizer.cpp
src/controllers/: __init__.py  assistant_controller.py  backtest_controller.py  import_export_controller.py  portfolio_controller.py  saved_controller.py  sensitivity_controller.py  settings_controller.py
src/main/: index.ts
src/main/ipc/: portfolio.ipc.ts
src/main/services/data/: blob-store.ts  rate-limiter.ts  store.ts
src/main/services/data/providers/: alpha-vantage.provider.ts  provider.interface.ts
src/main/services/optimization/: optimizer.ts
src/main/utils/: logger.ts  math.ts
src/models/: __init__.py  asset.py  holding.py  portfolio.py
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/hooks/: useIpc.ts
src/renderer/pages/: BackTestPage.tsx  GeneratePage.tsx  ImportPage.tsx  SavedPage.tsx  SensitivityPage.tsx  SettingsPage.tsx
src/renderer/stores/: portfolio.store.ts
src/services/: __init__.py  data_store.py  optimizer.py  universe.py
src/shared/: constants.ts
src/shared/types/: asset.types.ts  backtest.types.ts  ipc.types.ts  portfolio.types.ts  sensitivity.types.ts  settings.types.ts
src/shared/validation/: schemas.ts
src/ui/qml/: Main.qml
src/ui/qml/components/: LineChart.qml  PieChart.qml
src/ui/qml/pages/: BacktestPage.qml  GeneratePage.qml  ImportPage.qml  PlaceholderPage.qml  SavedPage.qml  SensitivityPage.qml  SettingsPage.qml
tests/: test_optimizer.py
